# nn-pitagora

./: .gitignore  ANIMATION_GUIDE.md  CLAUDE.md  LICENSE  README.md  animate_surface.py  animate_weights.py  nn_pitagora.py  pitagora.py  pitagora2.py  pyproject.toml  right_triangles.py  visualizza_parametri.py
