[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-pitagora"
version = "1.0.0"
description = "Neural Network implementation of Pythagorean Theorem with Manim animations"
readme = "README.md"
requires-python = ">=3.8"

# NOTE: System Requirements (must be installed separately):
# - FFmpeg: Required for Manim video rendering
#   Windows: choco install ffmpeg OR download from https://ffmpeg.org/
#   macOS: brew install ffmpeg
#   Linux: sudo apt-get install ffmpeg
# - LaTeX (optional): For mathematical text rendering in Manim
#   Windows: Install MiKTeX or TeX Live
#   macOS: brew install --cask mactex
#   Linux: sudo apt-get install texlive-full
license = {text = "MIT"}
authors = [
    {name = "Neural Network Pythagorean Theorem Project"}
]
keywords = [
    "neural-network",
    "pythagorean-theorem",
    "machine-learning",
    "deep-learning",
    "manim",
    "animation",
    "educational",
    "mathematics",
    "tensorflow",
    "keras"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

dependencies = [
    "numpy",
    "matplotlib",
    "tensorflow",  # Versione specifica per compatibilità
    "keras",  # Compatibile con TensorFlow 2.13.1
    "protobuf",  # Compatibile con TensorFlow 2.13.1
    "tensorboard",  # Compatibile con TensorFlow 2.13.1
    "typing-extensions",  # Compatibile con TensorFlow 2.13.1
    "plotly",
    "kaleido",  # Per esportare grafici Plotly
    "manim",
    "optuna",  # Versione più conservativa
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/PBrunot/nn-pitagora"
Repository = "https://github.com/PBrunot/nn-pitagora"
Issues = "https://github.com/PBrunot/nn-pitagora/issues"

[tool.setuptools]
py-modules = ["nn_pitagora", "animate_weights", "animate_surface", "right_triangles", "pitagora", "pitagora2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nn_pitagora*"]
exclude = [".venv*", "media*", "saved_models*", "__pycache__*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | \.vs
  | __pycache__
  | media
  | saved_models
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    '\.venv',
    'media',
    'saved_models',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU access",
]
